--- a/css/shimmer.css
+++ b/css/shimmer.css
@@ -26,11 +26,15 @@
     border-radius: 5px;
     margin-top: 5px;
     background: linear-gradient(to right, transparent 0%, rgba(72, 24, 24, 0.2) 25%, transparent 50%);
-    animation: shimmer 2s linear infinite;
+    animation: shimmerimg 4s linear infinite;
 }
 
 @keyframes shimmer {
     from { background-position: 0 px}
     to { background-position: 200px; }
   }
-  
+
+@keyframes shimmerimg {
+from { background-position: 0 px}
+to { background-position: 190px; }
+}
