--- a/css/index.css
+++ b/css/index.css
@@ -1,96 +1,3 @@
-.head-container {
-    display: flex;
-    background-color: rgb(17, 17, 17);
-    justify-content: space-between;
-}
-
-.menu-list > ul {
-    list-style-type: none;
-    color: white;
-    display: flex;
-    font-size: 20px;
-    padding: 20px;
-}
-
-.menu-list > ul > li {
-    padding: 0 20px;
-}
-
-
-.logo > img {
-    height: 100px;
-    width: 100px;
-}
-.card-list {
-    width: 200px;
-    margin : 20px;
-    justify-items: center;
-    background-color: lightgray;
-    text-align: center;
-    height: 350px;
-    border-radius: 5px;
-}
-.item-list{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.card-list > img {
-    width: 190px;
-    height: 200px;
-    border-radius: 5px;
-    margin-top: 5px;
-}
-
-.card-list:hover{
-    border: 1px solid black;
-}
-
-.btn {
-    margin-top : 20px;
-    padding: 5px;
-    width: 100px;
-    height: 30px;
-}
-
-.btn-login {
-    padding: 0 20px;
-    margin-left: 5px;
-    height: 30px;
-}
-
-.search{
-    width: 50%;
-}
-
-.search-filter{
-    display: inline-flex;
-    /* align-items: baseline; */
-    width: 100%;
-    justify-content: space-evenly;
-}
-
-#search {
-    padding: 5px;
-    width: 50%;
-    margin-right: 20px;
-}
-
-.filter .btn {
-    float: right;
-}
-
-.filter {
-    width: 40%;
-}
-
-.head-container a {
-    text-decoration: none;
-    color: white;
-}
-
-.body-container a{
-    text-decoration: none;
-    color: black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
